# poetry-template

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  taskfile.yml
.github/workflows/: ci.yml  tests.yml
scripts/: install-tools.sh
src/example/: example.py  main.py  parking_system.py
tests/: test_example.py  test_parking_system.py
