[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = "This is poetry template"
authors = ["Raphael Discky <raph.discky@gmail.com>"]
readme = "README.md"
packages = [
    {include = "my_package", from = "src"}, 
    {include = "example", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.black]
line-length = 90

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
isort = "^5.13.2"
black = "^24.4.2"
pyrefly = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
