[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = "This is poetry template"
authors = ["Raphael Discky <raph.discky@gmail.com>"]
readme = "README.md"
packages = [
    {include = "my_package", from = "src"}, 
    {include = "example", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pyrefly = "^0.17.0"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
